[tool.poetry]
name = "jigsawpy"
version = "1.0.0"
description = "Python interface for the JIGSAW meshing library."
authors = ["Darren Engwirda <d.engwirda@gmail.com>"]
homepage = "https://github.com/dengwirda/"
keywords = ["Mesh-generation", "Delaunay", "Voronoi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]
readme = "README.md"
license={file = "LICENSE"}

# include = [
#     { path = "jigsawpy/_lib/*", format = "wheel" },
#     { path = "jigsawpy/_bin/*", format = "wheel" },
# ]

build-backend = "scikit_build_core.build"

[build-system]
requires = [
    "scikit-build-core>=0.7.0",
    "numpy>=1.25.2",
    "scipy>=1.11.1",
    "cmake>=3.17.1"
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true

[tool.cibuildwheel]
test-command = "pytest {package}/tests"
test-requires = ['pytest']
skip = "pp* *i686 *-manylinux_i686 *_ppc64le *_s390x *-musllinux* *-win32"
build-verbosity = 1