[project]
name = "jigsawpy"
version = "1.0.0"
description = "Python interface for the JIGSAW meshing library."
authors = [
    {name="Darren Engwirda", email="d.engwirda@gmail.com"}
    ]
homepage = "https://github.com/dengwirda/"
keywords = ["Mesh-generation", "Delaunay", "Voronoi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]
readme = "README.md"
license={file = "LICENSE"}
requires-python=">=3.7"
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.7.3", 
]

[build-system]
requires = [
    "scikit-build-core>=0.7.0",
    "numpy>=1.21.6",
    "scipy>=1.7.3",
    "cmake>=3.15.7"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true
logging.level = "INFO"
cmake.build-type = "Release"
sdist.include=["files/*.msh"]

[tool.cibuildwheel]
test-command = "pytest {package}/tests"
test-requires = ['pytest']
skip = "pp* *i686 *-manylinux_i686 *_ppc64le *_s390x *-musllinux* *-win32"
build-verbosity = 1

[tool.cibuildwheel.macos]
before-all = [
    "brew install coreutils netcdf",
]
[tool.cibuildwheel.linux.environment]
PREFIX="/usr/local"
LD_LIBRARY_PATH="${PREFIX}/lib:/project/lib"
CPATH="${PREFIX}/include:/project/include"

[tool.cibuildwheel.linux]
before-all = [
    "yum install epel-release -y",
    "yum install netcdf-devel -y",
]

[tool.cibuildwheel.windows]
before-all = [
    "vcpkg integrate install",
    "vcpkg install netcdf-c"
]